Fixes for CentOS 8

--- a/tomcat8.conf
+++ b/tomcat8.conf
@@ -22,7 +22,7 @@ CATALINA_TMPDIR="/var/cache/tomcat8/temp"
 #JAVA_OPTS="-Xminf0.1 -Xmaxf0.3"
 
 # What user should run tomcat
-TOMCAT_USER="tomcat8"
+TOMCAT_USER="tomcat"
 #TOMCAT_GROUP="${TOMCAT_GROUP:-`id -gn $TOMCAT_USER`}"
 
 # RUNAS_USER
@@ -44,7 +44,7 @@ SHUTDOWN_WAIT="30"
 SHUTDOWN_VERBOSE=false
 
 # Set the TOMCAT_PID location
-CATALINA_PID="/var/run/tomcat8.pid"
+CATALINA_PID="/var/run/tomcat/tomcat8.pid"
 
 # Connector port is 8080 for this tomcat8 instance
 #CONNECTOR_PORT="8080"
@@ -65,4 +65,3 @@ MEMORY_OPTS="-XX:+UseConcMarkSweepGC"
 
 JAVA_OPTS="-Djava.awt.headless=true -Xrs -XX:-UsePerfData $MEMORY_OPTS $MARLIN_OPTS $SERVER_OPTS -Djava.library.path=$JAVA_LIB_PATH"
 GDAL_DATA=/usr/share/gdal
-
