--- a/tomcat8.service
+++ b/tomcat8.service
@@ -1,21 +1,20 @@
 [Unit]
-Description=Tomcat
+Description=Apache Tomcat
 
 [Service]
 Type=forking
 PIDFile=/var/run/tomcat/tomcat8.pid
 
 User=tomcat
-Group=tomcat
 
 Environment="JAVA_HOME=/usr/lib/jvm/jre-11"
-Environment="NAME=tomcat8"
 
 ExecStartPre=+/usr/bin/mkdir -p /var/run/tomcat
 ExecStartPre=+/usr/bin/chown -R tomcat:tomcat /var/run/tomcat
 
-ExecStart=/usr/sbin/tomcat8 start
-ExecStop=/usr/sbin/tomcat8 stop
+ExecStart=/usr/share/tomcat8/bin/startup.sh
+ExecStop=/usr/share/tomcat8/bin/shutdown.sh
+SuccessExitStatus=143
 
 [Install]
 WantedBy=multi-user.target
